Add job type to create process and naming function to allow injection of job type into process names.